fix: wrong padding at the bottom of .comments

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -67,6 +67,6 @@ hr {
 	display: grid;
 	justify-content: center;
 	align-content: center;
-	padding: 1rem;
+	padding: 1rem 1rem 2rem;
 	gap: 1rem;
 }
